--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -3746,5 +3746,30 @@
     "default": [],
     "category": "Development",
     "check": "false"
+  },
+  {
+    "Name": "IDA free",
+    "Description": "DA is a Windows, Linux or Mac OS X hosted multi-processor disassembler and debugger that offers so many features",
+    "winget": "none",
+    "choco": "ida-free",
+    "default": [],
+    "category": "Utilities",
+    "check": "false"
+  },
+  {
+    "Name": "Binary Ninja",
+    "Description": "reverse engineering tool. It supports a number of great features",
+    "winget": "none",
+    "choco": "none",
+    "default": [
+      {
+        "url": "https://cdn.binary.ninja/installers/binaryninja_free_win64.exe",
+        "args": "/silent",
+        "launcher": "binaryninja_free_win64.exe",
+        "portable": "false"
+      }
+    ],
+    "category": "Utilities",
+    "check": "false"
   }
 ]
