--- a/static/Database/Settings.json
+++ b/static/Database/Settings.json
@@ -58,5 +58,10 @@
     "Name": "Disable Automatic Driver Installation",
     "description": "Stopping Windows from automatically downloading and installing drivers",
     "category": "Drivers"
+  },
+  {
+    "Name": "Always show icons never Thumbnail",
+    "description": "Show icons in the file explorer instead of thumbnails",
+    "category": "Performance"
   }
 ]
