--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,7 @@ on:
   push:
     paths:
       - static/Database/Applications.json
+      - templates/README.md
       - CHANGELOG.md
     branches:
       - main  
