--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -2389,7 +2389,7 @@
     "Description": "Xbox 360 Controller Emulator” allows your controller (gamepad, joystick, steering wheel, pedals, etc.) to function on your PC as an Xbox 360 controller. It allows you to remap buttons and axes and to drive cars with steering wheel and pedals or to fly planes with joystick and throttle in games like “Grand Theft Auto” or “Saints Row” • Digitally Signed",
     "winget": "na",
     "choco": "na",
-    "itt": "x630ce",
+    "itt": "x360ce",
     "category": "Gaming",
     "check": "false"
   },
@@ -3651,6 +3651,15 @@
     "choco": "aegisub",
     "itt": "na",
     "category": "Media Tools",
+    "check": "false"
+  },
+  {
+    "Name": "AppGroup",
+    "Description": "App Group lets you organize, customize, and launch your apps",
+    "winget": "na",
+    "choco": "na",
+    "itt": "iandiv-appgroup",
+    "category": "Documents",
     "check": "false"
   }
 ]
