--- a/static/Database/Settings.json
+++ b/static/Database/Settings.json
@@ -1,12 +1,12 @@
 [
   {
     "Name": "Show file extensions",
-    "description": "Show file extensions in Windows displays the suffix at the end of file names (like .txt, .jpg, .exe), indicating file types and helping users identify which programs can open them, simplifying file management and differentiation",
+    "description": "Show file extensions in Windows displays the suffix at the end of file names (like .txt, .jpg, .exe) etc",
     "category": "Protection"
   },
   {
     "Name": "Show Super Hidden",
-    "description": "Show Super Hidden displays files and folders in Windows that are hidden beyond standard hidden files, often system files to prevent accidental changes",
+    "description": "Show Super Hidden displays files and folders",
     "category": "Protection"
   },
   {
@@ -21,7 +21,7 @@
   },
   {
     "Name": "Sticky Keys",
-    "description": "Sticky keys is an accessibility feature of some graphical user interfaces which assists users who have physical disabilities or help users reduce repetitive strain injury",
+    "description": "Sticky keys is an accessibility feature of some graphical user interfaces which assists users who have physical disabilities",
     "category": "Accessibility"
   },
   {
@@ -36,7 +36,7 @@
   },
   {
     "Name": "Clear Page File At Shutdown",
-    "description": "Page file in Windows removes sensitive data stored in virtual memory when the system shuts down. This enhances security by ensuring that the data in the page file (which may contain passwords, encryption keys, or other sensitive information) is wiped out and cannot be accessed after rebooting. However, it can increase shutdown time",
+    "description": "Page file in Windows removes sensitive data stored in virtual memory when the system shuts down",
     "category": "Storage "
   },
   {
@@ -51,7 +51,7 @@
   },
   {
     "Name": "Launch To This PC",
-    "description": "Changing the default opening location of File Explorer in Windows allows it to open directly to This PC instead of Quick Access, making it easier to quickly access main drives and system folders",
+    "description": "Changing the default opening location of File Explorer in Windows allows it to open directly to This PC",
     "category": "Accessibility"
   },
   {
