--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,9 +28,8 @@ jobs:
         run: |
           git config --global user.name "itt-co"
           git config --global user.email "167635892+itt-co@users.noreply.github.com"
-          git add itt.ps1
-          git add README.md
+          git add .
           git commit -m "update"
-          git push
+          git push -f
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
