--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,12 +24,13 @@ jobs:
         continue-on-error: false 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Commit 'itt' file
+      - name: Commit update
         run: |
           git config --global user.name "itt-co"
           git config --global user.email "167635892+itt-co@users.noreply.github.com"
-          git add .
+          git add itt.ps1
+          git add README.md
           git commit -m "update"
-          git push -f
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
